[workspace]
members = [
    "crates/peepee",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/mridang/peepee"
authors = ["Mridang Agarwalla <mridang.agarwalla@gmail.com>"]
homepage = "https://github.com/mridang/peepee"

[workspace.dependencies]
# hyper is the only dependency for now. The features cover what a forward proxy
# needs — HTTP/1, the server side, and the client side. An async runtime
# (e.g. tokio) and any glue crates get added as the proxy is built out.
hyper = { version = "1", features = ["http1", "client", "server"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
overflow-checks = false
